# PulsePress

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pnpm-lock.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: .gitkeep
.claude/commands/: implement-task.md  plan-sprint.md  prep-portfolio.md  review-diff.md  verify-task.md  write-adr.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1d39f6eeaae8_initial_schema.py
apps/api/app/: main.py
apps/api/app/api/: gifts.py  health.py  me.py  plans.py  publishing.py  router_local.py  subscriptions.py
apps/api/app/auth/: dependencies.py  jwt.py  local.py
apps/api/app/core/: config.py  correlation.py  problem.py
apps/api/app/db/: base.py  immutable.py  session.py
apps/api/app/domain/: __init__.py  money.py
apps/api/app/models/: __init__.py  commerce.py  identity.py  kernel.py  operability.py  publishing.py  read_models.py
apps/api/app/schemas/: auth.py  commerce.py  health.py  publishing.py  user.py
apps/api/app/scripts/: __init__.py  seed_demo_content.py
apps/api/app/services/: __init__.py  commerce.py  errors.py  idempotency.py  outbox.py
apps/api/tests/: conftest.py  helpers.py  test_auth.py  test_constraints.py  test_gifts.py  test_health.py  test_immutability.py  test_migrations.py  test_money.py  test_plans.py  test_publishing_api.py  test_seed_demo_content.py  test_subscriptions.py
apps/web/: Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/components/: AuthProvider.tsx  RouteGuard.tsx  SiteShell.tsx
apps/web/app/explore/: page.tsx
apps/web/app/home/: page.tsx
apps/web/app/lib/: api.ts  content.ts
apps/web/app/login/: page.tsx
apps/web/app/register/: page.tsx
apps/worker/: .dockerignore  Dockerfile  pyproject.toml
apps/worker/app/: main.py
apps/worker/pulsepress_worker/: __init__.py  adapters.py  config.py  db.py  events.py  main.py  models.py  outbox.py  processor.py  queue.py
apps/worker/tests/: conftest.py  test_outbox.py  test_processor.py  test_smoke.py
docs/: SPEC.md  architecture.md  aws-production-setup-guide.md  deployment.md  event-catalog.md  failure-modes.md  local-dev.md  observability.md  openapi.yaml  phase2.md  portfolio-checklist.md  setup-test-guide.md  sprint-plan.md  test-plan.md
docs/adr/: ADR-0001-terraform-over-cdk.md  ADR-0002-cognito-auth-code-pkce.md  ADR-0003-transactional-outbox.md  ADR-0004-sse-over-websockets.md  ADR-0005-redis-cache-fanout-not-source-of-truth.md  ADR-0006-walking-skeleton-deploy.md  ADR-0007-scale-to-zero-rebuild.md  ADR-0008-lazy-time-transitions.md  ADR-0009-soft-delete-posts.md  ADR-0010-behavioral-testing.md  ADR-0011-outbox-publish-then-mark.md  ADR-0012-ledger-transactions-over-cross-row-check.md
docs/design/: README.md  pulsepress-api-contract.html  pulsepress-bill-breakdown.html  pulsepress-component-context.html  pulsepress-er-model.html  pulsepress-event-catalog.html  pulsepress-hld-architecture.html  pulsepress-operability.html  pulsepress-seq-publish.html  pulsepress-seq-subscribe.html  pulsepress-sprint-plan.html  pulsepress-state-machines.html  pulsepress-subscription-tiers.html
docs/design-md/: README.md  pulsepress-api-contract.md  pulsepress-bill-breakdown.md  pulsepress-component-context.md  pulsepress-er-model.md  pulsepress-event-catalog.md  pulsepress-hld-architecture.md  pulsepress-operability.md  pulsepress-seq-publish.md  pulsepress-seq-subscribe.md  pulsepress-sprint-plan.md  pulsepress-state-machines.md  pulsepress-subscription-tiers.md
infra/terraform/modules/alb/: main.tf  (+2 more)
scripts/ci/: check_docs_links.py  test_agent_hooks.py  validate_openapi.py
scripts/dev/: down.sh  migrate.sh  up.sh
scripts/hooks/: pretool_guard.py  stop_verify.py
tasks/: lessons.md  sprint-review.md  todo.md
(+30 files in other folders)
