[project]
name = "pulsepress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "boto3>=1.43.18",
    "fastapi>=0.136.3",
]
tests = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
]
